--- a/martin.html
+++ b/martin.html
@@ -28,6 +28,7 @@
         </ul>
     </nav>
       <h1>MARTIN</h1>
+       <button class="button" role="button" onclick="location.href='martin2.html'">Cambiar a estadisticas como Golero </button>
     <div class="contenedor">
     	<img class="estadisticas01" src="imagenes/estadisticas1/martinEstadisticas01.png">
     	<img class="card" src="imagenes/cartas/2.0/Martin.png">
