--- a/martin2.html
+++ b/martin2.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="imagenes/icono.ico">
 	<title>	La Pelota No Se Mancha</title>
 	<link rel="stylesheet" type="text/css" href="css/estilos.css">
-    <link rel="stylesheet" type="text/css" href="css/estilosJugador.css">
+	<link rel="stylesheet" type="text/css" href="css/estilosJugador.css">
    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
@@ -27,17 +27,17 @@
            
         </ul>
     </nav>
-    <h1>GABO</h1>
+      <h1>MARTIN</h1>
     <div class="contenedor">
-        <img class="estadisticas01" src="imagenes/estadisticas1/gaboEstadisticas01.png">
-        <img class="card" src="imagenes/cartas/2.0/Gabo.png">
+    	<img class="estadisticas01" src="imagenes/estadisticas1/martin2Estadisticas01.png">
+    	<img class="card" src="imagenes/cartas/2.0/Martin2.png">
     </div>
     <div class="contenedor2">
-        <img src="imagenes/estadisticas2/gaboEstadisticas02.png">
+    	<img src="imagenes/estadisticas2/martin2Estadisticas02.png">
 
     </div>
-    <h1>LOGROS</h1>
-    <h2>Logros adquiridos 1/16</h2>
+   <h1>LOGROS</h1>
+    <h2>Logros adquiridos 0/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -88,7 +88,7 @@
  <p>11/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/mvp1.png">
+<img src="imagenes/logros/empty.png">
      <p>12/16</p>
     </div>
 </div>
