agregue los logros

--- a/cris.html
+++ b/cris.html
@@ -88,7 +88,7 @@
  <p>11/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/mvp1.png">
      <p>12/16</p>
     </div>
 </div>
