--- a/esteban.html
+++ b/esteban.html
@@ -76,7 +76,7 @@
 </div>
 <div class="bloque1">
     <div class="logro1">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/comilon1.png">
  <p>9/16</p>
     </div>
      <div class="logro2">
