--- a/gabo.html
+++ b/gabo.html
@@ -48,7 +48,7 @@
  <p>2/16</p>
     </div>
      <div class="logro3">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/atajapenales.png">
  <p>3/16</p>
     </div>
      <div class="logro4">
