actualizacion 6ta y 7ma jornada

--- a/clasificacion.html
+++ b/clasificacion.html
@@ -67,11 +67,11 @@
       <tr>
     <td class="headcol">Cris</td>
     <td>6</td>
-    <td>4</td>
+    <td>5</td>
     <td>2</td>
     <td>0</td>
-    <td>2</td>
-    <td>19</td>
+    <td>3</td>
+    <td>25</td>
     <td>1</td>
      </tr>
        <tr>
@@ -86,22 +86,22 @@
      </tr>
        <tr>
     <td class="headcol">Gabo</td>
+    <td>9</td>
     <td>6</td>
-    <td>4</td>
-    <td>2</td>
+    <td>3</td>
     <td>0</td>
-    <td>2</td>
-    <td>0</td>
+    <td>3</td>
+    <td>1</td>
     <td>1</td>
      </tr>
        <tr>
     <td>Gianni</td>
     <td>6</td>
-    <td>2</td>
+    <td>3</td>
     <td>2</td>
     <td>0</td>
-    <td>0</td>
-    <td>05</td>
+    <td>1</td>
+    <td>07</td>
     <td>0</td>
      </tr>
   
@@ -117,12 +117,12 @@
      </tr>
       <tr>
     <td>Jose</td>
+    <td>9</td>
+    <td>6</td>
     <td>3</td>
-    <td>4</td>
-    <td>1</td>
     <td>0</td>
     <td>3</td>
-    <td>14</td>
+    <td>19</td>
     <td>0</td>
      </tr>
    
@@ -138,12 +138,12 @@
      </tr>
       <tr>
     <td>Magic</td>
-    <td>0</td>
+    <td>3</td>
+    <td>3</td>
     <td>1</td>
     <td>0</td>
-    <td>0</td>
-    <td>1</td>
-    <td>01</td>
+    <td>2</td>
+    <td>03</td>
     <td>0</td>
      </tr>
        <tr>
@@ -200,32 +200,32 @@
         <tr>
     <td class="headcol">SBM</td>
     <td>6</td>
-    <td>4</td>
+    <td>6</td>
     <td>2</td>
     <td>0</td>
-    <td>2</td>
-    <td>20</td>
+    <td>5</td>
+    <td>33</td>
     <td>1</td>
      </tr>
        <tr>
     <td>Vale</td>
+    <td>9</td>
     <td>6</td>
-    <td>4</td>
-    <td>2</td>
+    <td>3</td>
     <td>0</td>
-    <td>2</td>
-    <td>02</td>
+    <td>3</td>
+    <td>03</td>
     <td>0</td>
      </tr>
       <tr>
     <td>Vampi</td>
+    <td>9</td>
+    <td>5</td>
     <td>3</td>
-    <td>3</td>
-    <td>1</td>
     <td>0</td>
     <td>2</td>
-    <td>04</td>
-    <td>0</td>
+    <td>12</td>
+    <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
@@ -239,13 +239,13 @@
      </tr>
      <tr>
     <td>Wallace</td>
-    <td>6</td>
-    <td>5</td>
-    <td>2</td>
+    <td>12</td>
+    <td>7</td>
+    <td>4</td>
     <td>0</td>
     <td>3</td>
-    <td>23</td>
-    <td>0</td>
+    <td>33</td>
+    <td>1</td>
      </tr>
        <tr>
     <td>Yuber</td>
@@ -269,6 +269,9 @@
 	<option value="Three">3ra Jornada</option>
 	<option value="Four">4ta Jornada</option>
 	<option value="Five">5ta Jornada</option>
+<option value="Six">6ta Jornada</option>
+<option value="Seven">7ma Jornada</option>
+
 </select>
 <div id="showOne" class="myDiv">
 	<div class="galeria">
@@ -342,6 +345,36 @@
 <p>Esteban(5) Wallace(9) Cris(8) Miche(7) Vale(0)| 29</p>   
 <p>-----------------------------------------------</p>
 <p>Gabo(0) Santi(1) SMB(14) Jose(2) Gordo(3)| 20</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showSix" class="myDiv">
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardWallaceMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Wallace.</h4>
+        <p>Lunes 22/11/22| 21:00| Metegol </p>
+      <p><br></p> 
+<p>Jose(0) Wallace(5) Vampi(2) Stick(0) Magic(2)| 9</p>   
+<p>-----------------------------------------------</p>
+<p>Gabo(0) Vale(0) SMB(5) Ale(1) Gianni(2)| 8</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showSeven" class="myDiv">
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardVampiMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Vampi.</h4>
+        <p>Miercoles 24/11/22| 20:00| Metegol </p>
+      <p><br></p> 
+<p>Gabo(1) Wallace(5) Jose(5) Vampi(6) Vale(1)| 18</p>   
+<p>-----------------------------------------------</p>
+<p>Cri(6) Magic(0) SMB(8) Ale(0) Smoke(0)| 20</p>       
         </div>
       </div>
   </div>
