--- a/clasificacion.html
+++ b/clasificacion.html
@@ -66,30 +66,30 @@
      </tr>
       <tr>
     <td class="headcol">Cris</td>
-    <td>06</td>
-    <td>5</td>
-    <td>2</td>
-    <td>0</td>
-    <td>3</td>
-    <td>25</td>
-    <td>1</td>
-     </tr>
-       <tr>
-    <td class="headcol">Esteban</td>
-    <td>06</td>
-    <td>3</td>
-    <td>2</td>
-    <td>0</td>
-    <td>1</td>
-    <td>11</td>
-    <td>0</td>
-     </tr>
-       <tr>
-    <td class="headcol">Gabo</td>
     <td>09</td>
     <td>6</td>
     <td>3</td>
     <td>0</td>
+    <td>3</td>
+    <td>28</td>
+    <td>1</td>
+     </tr>
+       <tr>
+    <td class="headcol">Esteban</td>
+    <td>10</td>
+    <td>5</td>
+    <td>3</td>
+    <td>1</td>
+    <td>1</td>
+    <td>21</td>
+    <td>1</td>
+     </tr>
+       <tr>
+    <td class="headcol">Gabo</td>
+    <td>10</td>
+    <td>7</td>
+    <td>3</td>
+    <td>1</td>
     <td>3</td>
     <td>01</td>
     <td>1</td>
@@ -97,11 +97,11 @@
        <tr>
     <td>Gianni</td>
     <td>06</td>
-    <td>3</td>
+    <td>4</td>
     <td>2</td>
     <td>0</td>
-    <td>1</td>
-    <td>07</td>
+    <td>2</td>
+    <td>08</td>
     <td>0</td>
      </tr>
   
@@ -117,12 +117,12 @@
      </tr>
       <tr>
     <td>Jose</td>
-    <td>09</td>
-    <td>6</td>
+    <td>13</td>
+    <td>8</td>
+    <td>4</td>
+    <td>1</td>
     <td>3</td>
-    <td>0</td>
-    <td>3</td>
-    <td>19</td>
+    <td>21</td>
     <td>0</td>
      </tr>
    
@@ -138,22 +138,22 @@
      </tr>
       <tr>
     <td>Magic</td>
-    <td>03</td>
-    <td>3</td>
+    <td>04</td>
+    <td>4</td>
     <td>1</td>
-    <td>0</td>
+    <td>1</td>
     <td>2</td>
     <td>03</td>
     <td>0</td>
      </tr>
        <tr>
     <td>Marcos</td>
-    <td>03</td>
+    <td>04</td>
+    <td>2</td>
     <td>1</td>
     <td>1</td>
     <td>0</td>
-    <td>0</td>
-    <td>0</td>
+    <td>4</td>
     <td>0</td>
      </tr>
        <tr>
@@ -169,32 +169,32 @@
       
        <tr>
     <td>Miche</td>
-    <td>06</td>
-    <td>3</td>
+    <td>09</td>
+    <td>4</td>
     <td>2</td>
     <td>0</td>
     <td>1</td>
-    <td>19</td>
+    <td>24</td>
     <td>0</td>
      </tr>
        <tr>
     <td>Nahue</td>
-    <td>03</td>
-    <td>1</td>
-    <td>1</td>
-    <td>0</td>
-    <td>0</td>
     <td>04</td>
+    <td>2</td>
+    <td>1</td>
+    <td>1</td>
     <td>0</td>
+    <td>10</td>
+    <td>1</td>
      </tr>
        <tr>
     <td>Santi</td>
-    <td>03</td>
-    <td>3</td>
+    <td>04</td>
+    <td>4</td>
     <td>1</td>
-    <td>0</td>
+    <td>1</td>
     <td>2</td>
-    <td>02</td>
+    <td>04</td>
     <td>0</td>
      </tr>
         <tr>
@@ -209,42 +209,42 @@
      </tr>
        <tr>
     <td>Vale</td>
-    <td>09</td>
-    <td>6</td>
+    <td>10</td>
+    <td>8</td>
     <td>3</td>
-    <td>0</td>
-    <td>3</td>
-    <td>03</td>
+    <td>1</td>
+    <td>4</td>
+    <td>04</td>
     <td>0</td>
      </tr>
       <tr>
     <td>Vampi</td>
-    <td>09</td>
-    <td>5</td>
+    <td>10</td>
+    <td>6</td>
     <td>3</td>
-    <td>0</td>
+    <td>1</td>
     <td>2</td>
-    <td>12</td>
+    <td>13</td>
     <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
     <td>03</td>
-    <td>3</td>
+    <td>4</td>
     <td>1</td>
     <td>0</td>
-    <td>2</td>
-    <td>07</td>
+    <td>3</td>
+    <td>09</td>
     <td>0</td>
      </tr>
      <tr>
     <td>Wallace</td>
     <td>12</td>
-    <td>7</td>
+    <td>8</td>
     <td>4</td>
     <td>0</td>
-    <td>3</td>
-    <td>33</td>
+    <td>4</td>
+    <td>38</td>
     <td>1</td>
      </tr>
        <tr>
@@ -271,9 +271,16 @@
 	<option value="Five">5ta Jornada</option>
 <option value="Six">6ta Jornada</option>
 <option value="Seven">7ma Jornada</option>
+<option value="Eight">8va Jornada</option>
+<option value="Nine">9na Jornada</option>
+
 
 </select>
 <div id="showOne" class="myDiv">
+	 <div class="jornada">
+    	<img src="imagenes/jornadas/1raJornada.png">
+
+    </div>
 	<div class="galeria">
 					<div class="card">
 			<img src="imagenes/cartas/motm/cardGonzaMOTM.png">
@@ -290,6 +297,9 @@
 
 </div>
 <div id="showTwo" class="myDiv">
+	 <div class="jornada">
+    	<img src="imagenes/jornadas/2daJornada.png">
+
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardGaboMOTM.png">
@@ -305,6 +315,9 @@
   </div>
 </div>
 <div id="showThree" class="myDiv">
+	 <div class="jornada">
+    	<img src="imagenes/jornadas/3raJornada.png">
+
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardYuberMOTM.png">
@@ -320,6 +333,9 @@
 </div>
 </div>
 <div id="showFour" class="myDiv">
+	 <div class="jornada">
+    	<img src="imagenes/jornadas/4taJornada.png">
+
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardSBMMOTM.png">
@@ -335,6 +351,9 @@
   </div>
 </div>
 <div id="showFive" class="myDiv">
+	 <div class="jornada">
+    	<img src="imagenes/jornadas/5taJornada.png">
+
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardCrisMOTM.png">
@@ -350,12 +369,15 @@
   </div>
 </div>
 <div id="showSix" class="myDiv">
+	 <div class="jornada">
+    	<img src="imagenes/jornadas/6taJornada.png">
+
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardWallaceMOTM.png">
       <div class="cuerpo-card">
   <h4>Mejor jugador del partido: Wallace.</h4>
-        <p>Lunes 22/11/22| 21:00| Metegol </p>
+        <p>Lunes 21/11/22| 21:00| Metegol </p>
       <p><br></p> 
 <p>Jose(0) Wallace(5) Vampi(2) Stick(0) Magic(2)| 9</p>   
 <p>-----------------------------------------------</p>
@@ -365,16 +387,55 @@
   </div>
 </div>
 <div id="showSeven" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/7maJornada.png">
+
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardVampiMOTM.png">
       <div class="cuerpo-card">
   <h4>Mejor jugador del partido: Vampi.</h4>
-        <p>Miercoles 24/11/22| 20:00| Metegol </p>
+        <p>Miercoles 23/11/22| 20:00| Metegol </p>
       <p><br></p> 
 <p>Gabo(1) Wallace(5) Jose(5) Vampi(6) Vale(1)| 18</p>   
 <p>-----------------------------------------------</p>
 <p>Cri(6) Magic(0) SMB(8) Ale(0) Smoke(0)| 20</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showEight" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/8vaJornada.png">
+
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardNahueMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Nahue.</h4>
+        <p>Domingo 27/11/22| 19:00| Bodega </p>
+      <p><br></p> 
+<p>Gabo(0) esteban(5) Nahue(6) Vampi(1) Santi(2)| 14</p>   
+<p>-----------------------------------------------</p>
+<p>Jose(2) Magic(0) Vale(0) Gordo(7) Marcos(4)| 14</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showNine" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/9naJornada.png">
+
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardEstebanMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Esteban.</h4>
+        <p>Martes 29/11/22| 20:00| Bodega </p>
+      <p><br></p> 
+<p>Lean(4) Esteban(5) Jose(0) Cris(3) Miche(5)| 17</p>   
+<p>-----------------------------------------------</p>
+<p>Vale(1) Vega(2) Negro Santi(3) Gianni(1) Wallace(5)| 12</p>       
         </div>
       </div>
   </div>
