--- a/cris.html
+++ b/cris.html
@@ -37,7 +37,7 @@
 
     </div>
    <h1>LOGROS</h1>
-    <h2>Logros adquiridos 0/16</h2>
+    <h2>Logros adquiridos 2/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -48,7 +48,7 @@
  <p>2/16</p>
     </div>
      <div class="logro3">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/atajapenales.png">
  <p>3/16</p>
     </div>
      <div class="logro4">
