--- a/gabo.html
+++ b/gabo.html
@@ -37,7 +37,7 @@
 
     </div>
     <h1>LOGROS</h1>
-    <h2>Logros adquiridos 1/16</h2>
+    <h2>Logros adquiridos 3/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -70,7 +70,7 @@
  <p>7/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/bomba3.png">
      <p>8/16</p>
     </div>
 </div>
