--- a/marcos.html
+++ b/marcos.html
@@ -37,7 +37,7 @@
 
     </div>
     <h1>LOGROS</h1>
-    <h2>Logros adquiridos 0/16</h2>
+    <h2>Logros adquiridos 1/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -80,7 +80,7 @@
  <p>9/16</p>
     </div>
      <div class="logro2">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/cono1.png">
  <p>10/17</p>
     </div>
      <div class="logro3">
