--- a/jose.html
+++ b/jose.html
@@ -28,8 +28,89 @@
         </ul>
     </nav>
     <h1>JOSE</h1>
-    <h2>Estamos trabajando en esta sección vuelva mas adelante</h2>
-    <h2>Se necesitan mas partidos para evaluar a este jugador correctamente</h2>
+     <div class="contenedor">
+    	<img class="estadisticas01" src="imagenes/estadisticas1/joseEstadisticas01.png">
+    	<img class="card" src="imagenes/cartas/2.0/Jose.png">
+    </div>
+    <div class="contenedor2">
+    	<img src="imagenes/estadisticas2/joseEstadisticas02.png">
+
+    </div>
+    <h1>LOGROS</h1>
+    <h2>Logros adquiridos 0/16</h2>
+    <div class="bloque1">
+    <div class="logro1">
+<img src="imagenes/logros/empty.png">
+ <p>1/16</p>
+    </div>
+     <div class="logro2">
+<img src="imagenes/logros/empty.png">
+ <p>2/16</p>
+    </div>
+     <div class="logro3">
+<img src="imagenes/logros/empty.png">
+ <p>3/16</p>
+    </div>
+     <div class="logro4">
+<img src="imagenes/logros/empty.png">
+     <p>4/16</p>
+    </div>
+</div>
+<div class="bloque1">
+    <div class="logro1">
+<img src="imagenes/logros/empty.png">
+ <p>5/16</p>
+    </div>
+     <div class="logro2">
+<img src="imagenes/logros/empty.png">
+ <p>6/16</p>
+    </div>
+     <div class="logro3">
+<img src="imagenes/logros/empty.png">
+ <p>7/16</p>
+    </div>
+     <div class="logro4">
+<img src="imagenes/logros/empty.png">
+     <p>8/16</p>
+    </div>
+</div>
+<div class="bloque1">
+    <div class="logro1">
+<img src="imagenes/logros/empty.png">
+ <p>9/16</p>
+    </div>
+     <div class="logro2">
+<img src="imagenes/logros/empty.png">
+ <p>10/17</p>
+    </div>
+     <div class="logro3">
+<img src="imagenes/logros/empty.png">
+ <p>11/16</p>
+    </div>
+     <div class="logro4">
+<img src="imagenes/logros/empty.png">
+     <p>12/16</p>
+    </div>
+</div>
+<div class="bloque1">
+    <div class="logro1">
+<img src="imagenes/logros/empty.png">
+ <p>13/16</p>
+    </div>
+     <div class="logro2">
+<img src="imagenes/logros/empty.png">
+ <p>14/16</p>
+    </div>
+     <div class="logro3">
+<img src="imagenes/logros/empty.png">
+ <p>15/16</p>
+    </div>
+     <div class="logro4">
+<img src="imagenes/logros/empty.png">
+     <p>16/16</p>
+    </div>
+</div>
+ 
    <footer>
          <p> Todos los derechos reservados &copy; 2025 | Gabriel Reggiardo | </p>
 </footer>
