--- a/nahue.html
+++ b/nahue.html
@@ -38,7 +38,7 @@
 
     </div>
     <h1>LOGROS</h1>
-    <h2>Logros adquiridos 0/16</h2>
+    <h2>Logros adquiridos 2/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -53,7 +53,7 @@
  <p>3/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/atrevido1.png">
      <p>4/16</p>
     </div>
 </div>
@@ -89,7 +89,7 @@
  <p>11/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/mvp1.png">
      <p>12/16</p>
     </div>
 </div>
