--- a/clasificacion.html
+++ b/clasificacion.html
@@ -279,7 +279,6 @@
 <div id="showOne" class="myDiv">
 	 <div class="jornada">
     	<img src="imagenes/jornadas/1raJornada.png">
-
     </div>
 	<div class="galeria">
 					<div class="card">
@@ -299,6 +298,7 @@
 <div id="showTwo" class="myDiv">
 	 <div class="jornada">
     	<img src="imagenes/jornadas/2daJornada.png">
+    </div>
 
 	 <div class="galeria">
           <div class="card">
@@ -317,6 +317,7 @@
 <div id="showThree" class="myDiv">
 	 <div class="jornada">
     	<img src="imagenes/jornadas/3raJornada.png">
+    </div>
 
 	 <div class="galeria">
           <div class="card">
@@ -335,7 +336,7 @@
 <div id="showFour" class="myDiv">
 	 <div class="jornada">
     	<img src="imagenes/jornadas/4taJornada.png">
-
+</div>
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardSBMMOTM.png">
@@ -353,6 +354,7 @@
 <div id="showFive" class="myDiv">
 	 <div class="jornada">
     	<img src="imagenes/jornadas/5taJornada.png">
+    	</div>
 
 	 <div class="galeria">
           <div class="card">
@@ -371,7 +373,7 @@
 <div id="showSix" class="myDiv">
 	 <div class="jornada">
     	<img src="imagenes/jornadas/6taJornada.png">
-
+</div>
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardWallaceMOTM.png">
@@ -389,7 +391,7 @@
 <div id="showSeven" class="myDiv">
  <div class="jornada">
     	<img src="imagenes/jornadas/7maJornada.png">
-
+</div>
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardVampiMOTM.png">
@@ -407,7 +409,7 @@
 <div id="showEight" class="myDiv">
  <div class="jornada">
     	<img src="imagenes/jornadas/8vaJornada.png">
-
+</div>
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardNahueMOTM.png">
@@ -425,7 +427,7 @@
 <div id="showNine" class="myDiv">
  <div class="jornada">
     	<img src="imagenes/jornadas/9naJornada.png">
-
+</div>
 	 <div class="galeria">
           <div class="card">
       <img src="imagenes/cartas/motm/cardEstebanMOTM.png">
