actualizacion 10ma jornada

--- a/clasificacion.html
+++ b/clasificacion.html
@@ -86,20 +86,20 @@
      </tr>
        <tr>
     <td class="headcol">Gabo</td>
-    <td>10</td>
-    <td>7</td>
+    <td>11</td>
+    <td>8</td>
     <td>3</td>
-    <td>1</td>
+    <td>2</td>
     <td>3</td>
     <td>01</td>
     <td>1</td>
      </tr>
        <tr>
     <td>Gianni</td>
-    <td>06</td>
-    <td>4</td>
+    <td>07</td>
+    <td>5</td>
     <td>2</td>
-    <td>0</td>
+    <td>1</td>
     <td>2</td>
     <td>08</td>
     <td>0</td>
@@ -138,10 +138,10 @@
      </tr>
       <tr>
     <td>Magic</td>
-    <td>04</td>
-    <td>4</td>
+    <td>05</td>
+    <td>5</td>
     <td>1</td>
-    <td>1</td>
+    <td>2</td>
     <td>2</td>
     <td>03</td>
     <td>0</td>
@@ -199,12 +199,12 @@
      </tr>
         <tr>
     <td class="headcol">SBM</td>
-    <td>06</td>
-    <td>6</td>
+    <td>07</td>
+    <td>7</td>
     <td>2</td>
-    <td>0</td>
+    <td>1</td>
     <td>4</td>
-    <td>33</td>
+    <td>35</td>
     <td>1</td>
      </tr>
        <tr>
@@ -219,30 +219,30 @@
      </tr>
       <tr>
     <td>Vampi</td>
-    <td>10</td>
-    <td>6</td>
+    <td>11</td>
+    <td>7</td>
     <td>3</td>
-    <td>1</td>
+    <td>2</td>
     <td>2</td>
     <td>13</td>
     <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
-    <td>03</td>
-    <td>4</td>
+    <td>04</td>
+    <td>5</td>
     <td>1</td>
-    <td>0</td>
+    <td>1</td>
     <td>3</td>
-    <td>09</td>
-    <td>0</td>
+    <td>16</td>
+    <td>1</td>
      </tr>
      <tr>
     <td>Wallace</td>
-    <td>12</td>
-    <td>8</td>
+    <td>13</td>
+    <td>9</td>
     <td>4</td>
-    <td>0</td>
+    <td>1</td>
     <td>4</td>
     <td>38</td>
     <td>1</td>
@@ -273,6 +273,8 @@
 <option value="Seven">7ma Jornada</option>
 <option value="Eight">8va Jornada</option>
 <option value="Nine">9na Jornada</option>
+<option value="Ten">10ma Jornada</option>
+<option value="Eleven">11va Jornada</option>
 
 
 </select>
@@ -438,6 +440,24 @@
 <p>Lean(4) Esteban(5) Jose(0) Cris(3) Miche(5)| 17</p>   
 <p>-----------------------------------------------</p>
 <p>Vale(1) Vega(2) Negro Santi(3) Gianni(1) Wallace(5)| 12</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showTen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/10maJornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardVegaMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Vega.</h4>
+        <p>Viernes 2/12/22| 19:00| bodega </p>
+      <p><br></p> 
+<p>Vega(7) Mapache(0) Magic(0) Wallace(0) Vampi(0) | 7</p>   
+<p>-----------------------------------------------</p>
+<p>Gabo(0) Sbm(2) Fleitas(3) Apikal(2) Gianni(0) | 7</p>       
         </div>
       </div>
   </div>
