--- a/clasificacion.html
+++ b/clasificacion.html
@@ -66,49 +66,49 @@
      </tr>
       <tr>
     <td class="headcol">Cris</td>
-    <td>09</td>
-    <td>6</td>
-    <td>3</td>
+    <td>12</td>
+    <td>07</td>
+    <td>4</td>
     <td>0</td>
     <td>3</td>
-    <td>28</td>
+    <td>33</td>
     <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Esteban</td>
-    <td>10</td>
-    <td>5</td>
-    <td>3</td>
+    <td>13</td>
+    <td>06</td>
+    <td>4</td>
     <td>1</td>
     <td>1</td>
-    <td>21</td>
+    <td>27</td>
     <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Gabo</td>
-    <td>11</td>
-    <td>8</td>
-    <td>3</td>
+    <td>14</td>
+    <td>09</td>
+    <td>4</td>
     <td>2</td>
     <td>3</td>
     <td>01</td>
-    <td>1</td>
+    <td>2</td>
      </tr>
        <tr>
     <td>Gianni</td>
-    <td>07</td>
-    <td>5</td>
-    <td>2</td>
+    <td>10</td>
+    <td>06</td>
+    <td>3</td>
     <td>1</td>
     <td>2</td>
-    <td>08</td>
+    <td>13</td>
     <td>0</td>
      </tr>
   
        <tr>
     <td>Gonza</td>
     <td>03</td>
-    <td>1</td>
+    <td>01</td>
     <td>1</td>
     <td>0</td>
     <td>0</td>
@@ -118,11 +118,11 @@
       <tr>
     <td>Jose</td>
     <td>13</td>
-    <td>8</td>
+    <td>10</td>
     <td>4</td>
     <td>1</td>
-    <td>3</td>
-    <td>21</td>
+    <td>5</td>
+    <td>31</td>
     <td>0</td>
      </tr>
    
@@ -138,22 +138,22 @@
      </tr>
       <tr>
     <td>Magic</td>
-    <td>05</td>
-    <td>5</td>
-    <td>1</td>
+    <td>08</td>
+    <td>07</td>
     <td>2</td>
     <td>2</td>
-    <td>03</td>
+    <td>3</td>
+    <td>09</td>
     <td>0</td>
      </tr>
        <tr>
     <td>Marcos</td>
-    <td>04</td>
+    <td>07</td>
+    <td>03</td>
     <td>2</td>
     <td>1</td>
-    <td>1</td>
     <td>0</td>
-    <td>04</td>
+    <td>07</td>
     <td>0</td>
      </tr>
        <tr>
@@ -169,18 +169,18 @@
       
        <tr>
     <td>Miche</td>
-    <td>09</td>
-    <td>4</td>
-    <td>2</td>
+    <td>12</td>
+    <td>05</td>
+    <td>3</td>
     <td>0</td>
     <td>1</td>
-    <td>24</td>
-    <td>0</td>
+    <td>39</td>
+    <td>1</td>
      </tr>
        <tr>
     <td>Nahue</td>
     <td>04</td>
-    <td>2</td>
+    <td>02</td>
     <td>1</td>
     <td>1</td>
     <td>0</td>
@@ -190,7 +190,7 @@
        <tr>
     <td>Santi</td>
     <td>04</td>
-    <td>4</td>
+    <td>04</td>
     <td>1</td>
     <td>1</td>
     <td>2</td>
@@ -199,19 +199,19 @@
      </tr>
         <tr>
     <td class="headcol">SBM</td>
-    <td>07</td>
-    <td>7</td>
-    <td>2</td>
+    <td>10</td>
+    <td>09</td>
+    <td>3</td>
     <td>1</td>
-    <td>4</td>
-    <td>35</td>
+    <td>5</td>
+    <td>51</td>
     <td>1</td>
      </tr>
        <tr>
     <td>Vale</td>
-    <td>10</td>
-    <td>8</td>
-    <td>3</td>
+    <td>13</td>
+    <td>09</td>
+    <td>4</td>
     <td>1</td>
     <td>4</td>
     <td>04</td>
@@ -220,17 +220,17 @@
       <tr>
     <td>Vampi</td>
     <td>11</td>
-    <td>7</td>
+    <td>09</td>
     <td>3</td>
     <td>2</td>
-    <td>2</td>
-    <td>13</td>
+    <td>4</td>
+    <td>15</td>
     <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
     <td>04</td>
-    <td>5</td>
+    <td>05</td>
     <td>1</td>
     <td>1</td>
     <td>3</td>
@@ -240,7 +240,7 @@
      <tr>
     <td>Wallace</td>
     <td>13</td>
-    <td>9</td>
+    <td>09</td>
     <td>4</td>
     <td>1</td>
     <td>4</td>
@@ -250,7 +250,7 @@
        <tr>
     <td>Yuber</td>
     <td>03</td>
-    <td>1</td>
+    <td>01</td>
     <td>1</td>
     <td>0</td>
     <td>0</td>
@@ -274,7 +274,8 @@
 <option value="Eight">8va Jornada</option>
 <option value="Nine">9na Jornada</option>
 <option value="Ten">10ma Jornada</option>
-<option value="Eleven">11va Jornada</option>
+<option value="Eleven">11° Jornada</option>
+<option value="Twelve">12° Jornada</option>
 
 
 </select>
@@ -458,6 +459,42 @@
 <p>Vega(7) Mapache(0) Magic(0) Wallace(0) Vampi(0) | 7</p>   
 <p>-----------------------------------------------</p>
 <p>Gabo(0) Sbm(2) Fleitas(3) Apikal(2) Gianni(0) | 7</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showEleven" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/11Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardGaboMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Gabo.</h4>
+        <p>Domingo 4/12/22| 20:00| bodega </p>
+      <p><br></p> 
+<p>Gabo(0) [Smoke(4) SBM(7)] [Stick(3) Marcos(3)] Esteban(6) Vale(0) |23 </p>   
+<p>-----------------------------------------------</p>
+<p>Jose(7) Magic(5) Vampi(1) Ale(1) Pollo(4) | 18</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showTwelve" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/12Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardMicheMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Miche.</h4>
+        <p>Lunes 5/12/22| 20:00| bodega </p>
+      <p><br></p> 
+<p>Cris(5) Miche(15) Magic(1) Gianni(5) Smoke(2) | 28</p>   
+<p>-----------------------------------------------</p>
+<p>Jose(3) Sbm(9) Vampi(1) Lean(1) Chiki(3) | 17</p>       
         </div>
       </div>
   </div>
