--- a/miche.html
+++ b/miche.html
@@ -85,11 +85,11 @@
  <p>10/17</p>
     </div>
      <div class="logro3">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/goleador.png">
  <p>11/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/mvp1.png">
      <p>12/16</p>
     </div>
 </div>
