--- a/ranking.html
+++ b/ranking.html
@@ -30,7 +30,14 @@
 <h1>RANKING</h1>
 <p>La clase de cada jugador y su posicion en el ranking aparecera despues de que dicho jugador pase los 3 partidos jugados. Por mientras se encontrara en fase clasificatoria y aun no tendra un puesto en el ranking.<br></p>
 <p></p>
-<p>Despues de que termine una temporada, que 1 temporada estara comprendida en 10 Jornadas "Oficiales", dependiendo en que clase se encuentre hasta el momento cada jugador tendra derecho a aumentar o disminuir uno o mas puntos de las 6 categorias que desee(mientras mas calidad de jugador alcance mas puntos podra aumentar, asi como tendra que disminur si su puesto termina siendo muy bajo). </p>
+<p>Despues de que termine una temporada, que 1 temporada estara comprendida en 10 Jornadas "Oficiales", dependiendo en que clase se encuentre hasta el momento cada jugador tendra derecho a aumentar uno o mas puntos de las 6 categorias que desee(mientras mas calidad de jugador alcance mas puntos podra aumentar).Los puntos a aumentar por cada clase son los siguientes: </p>
+<p style="color: #cd7f32; font-weight: bold;">Clase D ==> 0 pts</p>
+<p style="color: #c1c4c8; font-weight: bold;">Clase C ==> 0 pts</p>
+<p style="color: #efb810; font-weight: bold;">Clase B ==> 1 pts</p>
+<p style="color: #2ca65d; font-weight: bold;">Clase A ==> 2 pts</p>
+<p style="color: #77c4d5; font-weight: bold;">Clase S ==> 3 pts</p>
+<p style="color: #9b4ccd; font-weight: bold;">Leyenda ==> 5 pts</p>
+<p style="color: #ffa037; font-weight: bold;">Mago ==> 8 pts</p>
 <div class="primerPuesto">
     <img  width="400" src="imagenes/img/1roRanked6.png">
 </div>
