agregada 6ta imagen al inicio

--- a/index.html
+++ b/index.html
@@ -65,6 +65,11 @@
     <img src="imagenes/img/1.png" style="width:100%">
     <div class="text"></div>
   </div>
+    <div class="mySlides fade">
+    <div class="numbertext"></div>
+    <img src="imagenes/img/06.png" style="width:100%">
+    <div class="text"></div>
+  </div>
 
   <!-- Next and previous buttons -->
   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -79,6 +84,7 @@
   <span class="dot" onclick="currentSlide(3)"></span>
     <span class="dot" onclick="currentSlide(4)"></span>
       <span class="dot" onclick="currentSlide(5)"></span>
+        <span class="dot" onclick="currentSlide(6)"></span>
 </div>
    <footer>
          <p> Todos los derechos reservados &copy; 2025 | Gabriel Reggiardo | </p>
