--- a/clasificacion.html
+++ b/clasificacion.html
@@ -86,13 +86,13 @@
      </tr>
        <tr>
     <td class="headcol">Gabo</td>
-    <td>14</td>
-    <td>09</td>
-    <td>4</td>
+    <td>17</td>
+    <td>10</td>
+    <td>5</td>
     <td>2</td>
     <td>3</td>
     <td>01</td>
-    <td>2</td>
+    <td>3</td>
      </tr>
        <tr>
     <td>Gianni</td>
@@ -118,11 +118,11 @@
       <tr>
     <td>Jose</td>
     <td>13</td>
-    <td>10</td>
+    <td>11</td>
     <td>4</td>
     <td>1</td>
-    <td>5</td>
-    <td>31</td>
+    <td>6</td>
+    <td>33</td>
     <td>0</td>
      </tr>
    
@@ -138,12 +138,12 @@
      </tr>
       <tr>
     <td>Magic</td>
+    <td>11</td>
     <td>08</td>
-    <td>07</td>
-    <td>2</td>
+    <td>3</td>
     <td>2</td>
     <td>3</td>
-    <td>09</td>
+    <td>14</td>
     <td>0</td>
      </tr>
        <tr>
@@ -190,21 +190,21 @@
        <tr>
     <td>Santi</td>
     <td>04</td>
-    <td>04</td>
+    <td>05</td>
     <td>1</td>
     <td>1</td>
-    <td>2</td>
-    <td>04</td>
+    <td>3</td>
+    <td>05</td>
     <td>0</td>
      </tr>
         <tr>
     <td class="headcol">SBM</td>
     <td>10</td>
-    <td>09</td>
+    <td>10</td>
     <td>3</td>
     <td>1</td>
-    <td>5</td>
-    <td>51</td>
+    <td>6</td>
+    <td>55</td>
     <td>1</td>
      </tr>
        <tr>
@@ -219,22 +219,22 @@
      </tr>
       <tr>
     <td>Vampi</td>
-    <td>11</td>
-    <td>09</td>
-    <td>3</td>
+    <td>14</td>
+    <td>10</td>
+    <td>4</td>
     <td>2</td>
     <td>4</td>
-    <td>15</td>
+    <td>16</td>
     <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
-    <td>04</td>
-    <td>05</td>
-    <td>1</td>
+    <td>07</td>
+    <td>06</td>
+    <td>2</td>
     <td>1</td>
     <td>3</td>
-    <td>16</td>
+    <td>26</td>
     <td>1</td>
      </tr>
      <tr>
@@ -276,6 +276,7 @@
 <option value="Ten">10ma Jornada</option>
 <option value="Eleven">11° Jornada</option>
 <option value="Twelve">12° Jornada</option>
+<option value="Thirteen">13° Jornada</option>
 
 
 </select>
@@ -404,7 +405,7 @@
       <p><br></p> 
 <p>Gabo(1) Wallace(5) Jose(5) Vampi(6) Vale(1)| 18</p>   
 <p>-----------------------------------------------</p>
-<p>Cri(6) Magic(0) SMB(8) Ale(0) Smoke(0)| 20</p>       
+<p>Cri(6) Magic(0) SMB(8) Ale(0) Smoke(0)| 14</p>       
         </div>
       </div>
   </div>
@@ -495,6 +496,24 @@
 <p>Cris(5) Miche(15) Magic(1) Gianni(5) Smoke(2) | 28</p>   
 <p>-----------------------------------------------</p>
 <p>Jose(3) Sbm(9) Vampi(1) Lean(1) Chiki(3) | 17</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showThirteen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/13Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardGaboMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Gabo.</h4>
+        <p>Domingo 11/12/22| 19:00| bodega </p>
+      <p><br></p> 
+<p>Gabo(0) Vega(10) Magic(5) Ale(2) Vampi(1) | 18</p>   
+<p>-----------------------------------------------</p>
+<p>Jose(2) SBM(4) Lean(0) Fleitas(0) Santi(1) | 7</p>       
         </div>
       </div>
   </div>
