--- a/clasificacion.html
+++ b/clasificacion.html
@@ -43,6 +43,16 @@
  </tr>
   </thead>
  <tbody>
+ 	<tr>
+    <td class="headcol">Ale</td>
+    <td>3</td>
+    <td>4</td>
+    <td>1</td>
+    <td>0</td>
+    <td>3</td>
+    <td>4</td>
+    <td>0</td>
+     </tr>
   <tr>
     <td class="headcol">Antena</td>
     <td>0</td>
@@ -115,6 +125,16 @@
     <td>0</td>
     <td>1</td>
      </tr>
+         <tr>
+    <td>Gordo</td>
+    <td>01</td>
+    <td>03</td>
+    <td>0</td>
+    <td>1</td>
+    <td>2</td>
+    <td>11</td>
+    <td>0</td>
+     </tr>
       <tr>
     <td>Jose</td>
     <td>13</td>
@@ -144,6 +164,16 @@
     <td>2</td>
     <td>3</td>
     <td>14</td>
+    <td>0</td>
+     </tr>
+        <tr>
+    <td>Lean</td>
+    <td>03</td>
+    <td>03</td>
+    <td>1</td>
+    <td>0</td>
+    <td>2</td>
+    <td>05</td>
     <td>0</td>
      </tr>
        <tr>
@@ -206,6 +236,16 @@
     <td>6</td>
     <td>55</td>
     <td>1</td>
+     </tr>
+      <tr>
+    <td>Smoke</td>
+    <td>06</td>
+    <td>03</td>
+    <td>2</td>
+    <td>0</td>
+    <td>1</td>
+    <td>06</td>
+    <td>0</td>
      </tr>
        <tr>
     <td>Vale</td>
