--- a/gabo.html
+++ b/gabo.html
@@ -94,7 +94,7 @@
 </div>
 <div class="bloque1">
     <div class="logro1">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/mvp2.png">
  <p>13/16</p>
     </div>
      <div class="logro2">
