--- a/vega.html
+++ b/vega.html
@@ -67,7 +67,7 @@
  <p>6/16</p>
     </div>
      <div class="logro3">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/bomba2.png">
  <p>7/16</p>
     </div>
      <div class="logro4">
@@ -85,7 +85,7 @@
  <p>10/17</p>
     </div>
      <div class="logro3">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/goleador.png">
  <p>11/16</p>
     </div>
      <div class="logro4">
