--- a/vega.html
+++ b/vega.html
@@ -38,7 +38,7 @@
 
     </div>
    <h1>LOGROS</h1>
-    <h2>Logros adquiridos 0/16</h2>
+    <h2>Logros adquiridos 3/16</h2>
     <div class="bloque1">
     <div class="logro1">
 <img src="imagenes/logros/empty.png">
@@ -89,7 +89,7 @@
  <p>11/16</p>
     </div>
      <div class="logro4">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/mvp.png">
      <p>12/16</p>
     </div>
 </div>
