--- a/clasificacion.html
+++ b/clasificacion.html
@@ -94,6 +94,16 @@
     <td>27</td>
     <td>1</td>
      </tr>
+         <tr>
+    <td class="headcol">Fleitas</td>
+    <td>01</td>
+    <td>02</td>
+    <td>0</td>
+    <td>1</td>
+    <td>1</td>
+    <td>3</td>
+    <td>0</td>
+     </tr>
        <tr>
     <td class="headcol">Gabo</td>
     <td>17</td>
