--- a/clasificacion.html
+++ b/clasificacion.html
@@ -46,11 +46,11 @@
  	<tr>
     <td class="headcol">Ale</td>
     <td>03</td>
-    <td>04</td>
+    <td>05</td>
     <td>1</td>
     <td>0</td>
-    <td>3</td>
-    <td>04</td>
+    <td>4</td>
+    <td>05</td>
     <td>0</td>
      </tr>
   <tr>
@@ -77,11 +77,11 @@
       <tr>
     <td class="headcol">Cris</td>
     <td>12</td>
-    <td>07</td>
+    <td>08</td>
     <td>4</td>
     <td>0</td>
-    <td>3</td>
-    <td>33</td>
+    <td>4</td>
+    <td>37</td>
     <td>1</td>
      </tr>
        <tr>
@@ -96,19 +96,19 @@
      </tr>
          <tr>
     <td class="headcol">Fleitas</td>
-    <td>01</td>
-    <td>02</td>
-    <td>0</td>
-    <td>1</td>
-    <td>1</td>
+    <td>04</td>
     <td>03</td>
-    <td>0</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>07</td>
+    <td>1</td>
      </tr>
        <tr>
     <td class="headcol">Gabo</td>
-    <td>17</td>
-    <td>10</td>
-    <td>5</td>
+    <td>20</td>
+    <td>11</td>
+    <td>6</td>
     <td>2</td>
     <td>3</td>
     <td>01</td>
@@ -117,10 +117,10 @@
        <tr>
     <td>Gianni</td>
     <td>10</td>
-    <td>06</td>
+    <td>07</td>
     <td>3</td>
     <td>1</td>
-    <td>2</td>
+    <td>3</td>
     <td>13</td>
     <td>0</td>
      </tr>
@@ -147,12 +147,12 @@
      </tr>
       <tr>
     <td>Jose</td>
+    <td>16</td>
     <td>13</td>
-    <td>11</td>
-    <td>4</td>
+    <td>5</td>
     <td>1</td>
-    <td>6</td>
-    <td>33</td>
+    <td>7</td>
+    <td>38</td>
     <td>0</td>
      </tr>
    
@@ -169,11 +169,11 @@
       <tr>
     <td>Magic</td>
     <td>11</td>
-    <td>08</td>
+    <td>09</td>
     <td>3</td>
     <td>2</td>
-    <td>3</td>
-    <td>14</td>
+    <td>4</td>
+    <td>18</td>
     <td>0</td>
      </tr>
         <tr>
@@ -186,6 +186,17 @@
     <td>05</td>
     <td>0</td>
      </tr>
+      <tr>
+    <td>Mapache</td>
+    <td>04</td>
+    <td>03</td>
+    <td>1</td>
+    <td>1</td>
+    <td>1</td>
+    <td>04</td>
+    <td>0</td>
+     </tr>
+
        <tr>
     <td>Marcos</td>
     <td>07</td>
@@ -209,12 +220,12 @@
       
        <tr>
     <td>Miche</td>
-    <td>12</td>
-    <td>05</td>
-    <td>3</td>
+    <td>15</td>
+    <td>06</td>
+    <td>4</td>
     <td>0</td>
     <td>1</td>
-    <td>39</td>
+    <td>49</td>
     <td>1</td>
      </tr>
        <tr>
@@ -239,22 +250,22 @@
      </tr>
         <tr>
     <td class="headcol">SBM</td>
-    <td>10</td>
-    <td>10</td>
-    <td>3</td>
+    <td>13</td>
+    <td>11</td>
+    <td>4</td>
     <td>1</td>
     <td>6</td>
-    <td>55</td>
+    <td>61</td>
     <td>1</td>
      </tr>
       <tr>
     <td>Smoke</td>
     <td>06</td>
-    <td>03</td>
+    <td>04</td>
     <td>2</td>
     <td>0</td>
-    <td>1</td>
-    <td>06</td>
+    <td>2</td>
+    <td>0</td>
     <td>0</td>
      </tr>
        <tr>
@@ -269,32 +280,32 @@
      </tr>
       <tr>
     <td>Vampi</td>
-    <td>14</td>
-    <td>10</td>
-    <td>4</td>
+    <td>17</td>
+    <td>12</td>
+    <td>5</td>
     <td>2</td>
-    <td>4</td>
-    <td>16</td>
-    <td>1</td>
+    <td>5</td>
+    <td>20</td>
+    <td>2</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
     <td>07</td>
-    <td>06</td>
+    <td>07</td>
     <td>2</td>
     <td>1</td>
-    <td>3</td>
-    <td>26</td>
+    <td>4</td>
+    <td>30</td>
     <td>1</td>
      </tr>
      <tr>
     <td>Wallace</td>
-    <td>13</td>
-    <td>09</td>
-    <td>4</td>
+    <td>16</td>
+    <td>10</td>
+    <td>5</td>
     <td>1</td>
     <td>4</td>
-    <td>38</td>
+    <td>41</td>
     <td>1</td>
      </tr>
        <tr>
@@ -327,6 +338,10 @@
 <option value="Eleven">11° Jornada</option>
 <option value="Twelve">12° Jornada</option>
 <option value="Thirteen">13° Jornada</option>
+<option value="Fourteen">14° Jornada</option>
+<option value="Fifteen">15° Jornada</option>
+<option value="Sixteen">16° Jornada</option>
+
 
 
 </select>
@@ -564,6 +579,42 @@
 <p>Gabo(0) Vega(10) Magic(5) Ale(2) Vampi(1) | 18</p>   
 <p>-----------------------------------------------</p>
 <p>Jose(2) SBM(4) Lean(0) Fleitas(0) Santi(1) | 7</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showFourteen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/14Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardFleitasMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Fleitas.</h4>
+        <p>Lunes 12/12/22| 21:00| metegol </p>
+      <p><br></p> 
+<p>Fleitas(4) Mapa(0) Owen(2) Negro Santi(2) wallace(3) | 11</p>   
+<p>-----------------------------------------------</p>
+<p>Jose(0) Vampi(1) Gianni(0) Cris(4) Vega(4) | 9</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showFifteen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/15Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardVampiMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Vampi.</h4>
+        <p>Martes 13/12/22| 20:00| bodega </p>
+      <p><br></p> 
+<p>Gabo(0) Jose(5) Miche(10) SBM(6) Vampi(3) | 24</p>   
+<p>-----------------------------------------------</p>
+<p>Mapa(4) Mane(2) Magic(4) Ale(1) Smoke(3) | 14</p>       
         </div>
       </div>
   </div>
