--- a/clasificacion.html
+++ b/clasificacion.html
@@ -45,12 +45,12 @@
  <tbody>
  	<tr>
     <td class="headcol">Ale</td>
-    <td>03</td>
-    <td>05</td>
-    <td>1</td>
+    <td>09</td>
+    <td>08</td>
+    <td>3</td>
     <td>0</td>
-    <td>4</td>
-    <td>05</td>
+    <td>5</td>
+    <td>10</td>
     <td>0</td>
      </tr>
   <tr>
@@ -77,11 +77,11 @@
       <tr>
     <td class="headcol">Cris</td>
     <td>12</td>
-    <td>08</td>
+    <td>09</td>
     <td>4</td>
     <td>0</td>
-    <td>4</td>
-    <td>37</td>
+    <td>5</td>
+    <td>45</td>
     <td>1</td>
      </tr>
        <tr>
@@ -107,21 +107,21 @@
        <tr>
     <td class="headcol">Gabo</td>
     <td>20</td>
-    <td>11</td>
+    <td>13</td>
     <td>6</td>
     <td>2</td>
-    <td>3</td>
-    <td>01</td>
+    <td>5</td>
+    <td>02</td>
     <td>3</td>
      </tr>
        <tr>
     <td>Gianni</td>
     <td>10</td>
-    <td>07</td>
+    <td>09</td>
     <td>3</td>
     <td>1</td>
-    <td>3</td>
-    <td>13</td>
+    <td>5</td>
+    <td>17</td>
     <td>0</td>
      </tr>
   
@@ -147,12 +147,12 @@
      </tr>
       <tr>
     <td>Jose</td>
+    <td>19</td>
     <td>16</td>
-    <td>13</td>
-    <td>5</td>
+    <td>6</td>
     <td>1</td>
-    <td>7</td>
-    <td>38</td>
+    <td>9</td>
+    <td>48</td>
     <td>0</td>
      </tr>
    
@@ -169,11 +169,11 @@
       <tr>
     <td>Magic</td>
     <td>11</td>
-    <td>09</td>
+    <td>11</td>
     <td>3</td>
     <td>2</td>
-    <td>4</td>
-    <td>18</td>
+    <td>6</td>
+    <td>21</td>
     <td>0</td>
      </tr>
         <tr>
@@ -188,9 +188,9 @@
      </tr>
       <tr>
     <td>Mapache</td>
+    <td>07</td>
     <td>04</td>
-    <td>03</td>
-    <td>1</td>
+    <td>2</td>
     <td>1</td>
     <td>1</td>
     <td>04</td>
@@ -199,12 +199,12 @@
 
        <tr>
     <td>Marcos</td>
-    <td>07</td>
-    <td>03</td>
-    <td>2</td>
+    <td>10</td>
+    <td>04</td>
+    <td>3</td>
     <td>1</td>
     <td>0</td>
-    <td>07</td>
+    <td>09</td>
     <td>0</td>
      </tr>
        <tr>
@@ -220,13 +220,13 @@
       
        <tr>
     <td>Miche</td>
-    <td>15</td>
-    <td>06</td>
-    <td>5</td>
+    <td>18</td>
+    <td>07</td>
+    <td>6</td>
     <td>0</td>
     <td>1</td>
-    <td>49</td>
-    <td>1</td>
+    <td>57</td>
+    <td>2</td>
      </tr>
        <tr>
     <td>Nahue</td>
@@ -240,72 +240,72 @@
      </tr>
        <tr>
     <td>Santi</td>
-    <td>04</td>
-    <td>05</td>
-    <td>1</td>
+    <td>07</td>
+    <td>06</td>
+    <td>2</td>
     <td>1</td>
     <td>3</td>
-    <td>05</td>
-    <td>0</td>
+    <td>07</td>
+    <td>1</td>
      </tr>
         <tr>
     <td class="headcol">SBM</td>
     <td>13</td>
-    <td>11</td>
+    <td>12</td>
     <td>4</td>
     <td>1</td>
-    <td>6</td>
-    <td>61</td>
+    <td>7</td>
+    <td>69</td>
     <td>1</td>
      </tr>
       <tr>
     <td>Smoke</td>
-    <td>06</td>
-    <td>04</td>
-    <td>2</td>
+    <td>09</td>
+    <td>05</td>
+    <td>3</td>
     <td>0</td>
     <td>2</td>
-    <td>09</td>
+    <td>12</td>
     <td>0</td>
      </tr>
        <tr>
     <td>Vale</td>
-    <td>13</td>
-    <td>09</td>
-    <td>4</td>
+    <td>16</td>
+    <td>12</td>
+    <td>5</td>
     <td>1</td>
-    <td>4</td>
-    <td>04</td>
+    <td>6</td>
+    <td>06</td>
     <td>0</td>
      </tr>
       <tr>
     <td>Vampi</td>
-    <td>17</td>
-    <td>12</td>
-    <td>5</td>
-    <td>2</td>
-    <td>5</td>
     <td>20</td>
+    <td>14</td>
+    <td>6</td>
+    <td>2</td>
+    <td>6</td>
+    <td>23</td>
     <td>2</td>
      </tr>
        <tr>
     <td class="headcol">Vega</td>
-    <td>07</td>
-    <td>07</td>
-    <td>2</td>
+    <td>10</td>
+    <td>09</td>
+    <td>3</td>
     <td>1</td>
-    <td>4</td>
-    <td>30</td>
+    <td>5</td>
+    <td>41</td>
     <td>1</td>
      </tr>
      <tr>
     <td>Wallace</td>
-    <td>16</td>
-    <td>10</td>
-    <td>5</td>
+    <td>22</td>
+    <td>12</td>
+    <td>7</td>
     <td>1</td>
     <td>4</td>
-    <td>41</td>
+    <td>50</td>
     <td>1</td>
      </tr>
        <tr>
@@ -341,6 +341,8 @@
 <option value="Fourteen">14° Jornada</option>
 <option value="Fifteen">15° Jornada</option>
 <option value="Sixteen">16° Jornada</option>
+<option value="Seventeen">17° Jornada</option>
+<option value="Eighteen">18° Jornada</option>
 
 
 
@@ -619,6 +621,61 @@
       </div>
   </div>
 </div>
+<div id="showSixteen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/16Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardSantiMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Santi.</h4>
+        <p>Jueves 22/12/22| 20:00| bodega </p>
+      <p><br></p> 
+<p>Wallace(5) Santi(2) Vampi(2) Ale(3) Teo(1) | 14</p>   
+<p>-----------------------------------------------</p>
+<p>Gabo(1) Jose(4) Magic(1) Vale(2) Gianni(3) | 12</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showSeventeen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/17Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardChickiMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Chicki.</h4>
+        <p>Lunes 26/12/22| 20:00| bodega </p>
+      <p><br></p> 
+<p>Wallace(4) Vega(8) Marcos(2) Ale(0) Chicki(4) | 18</p>   
+<p>-----------------------------------------------</p>
+<p>Cris(8) Gianni(1) Jose(2) Magic(2) Vale(0) | 14</p>       
+        </div>
+      </div>
+  </div>
+</div>
+<div id="showEighteen" class="myDiv">
+ <div class="jornada">
+    	<img src="imagenes/jornadas/18Jornada.png">
+</div>
+	 <div class="galeria">
+          <div class="card">
+      <img src="imagenes/cartas/motm/cardMicheMOTM.png">
+      <div class="cuerpo-card">
+  <h4>Mejor jugador del partido: Miche.</h4>
+        <p>Martes 27/12/22| 20:00| bodega </p>
+      <p><br></p> 
+<p>Jose(4) Mapa(0) Miche(8) Vale(0) Smoke(3) | 15</p>   
+<p>-----------------------------------------------</p>
+<p>Gabo(0) SBM(8) Ale(2) Vega(3) Vampi(1) | 14</p>       
+        </div>
+      </div>
+  </div>
+</div>
+
 
 <script src="js/tablesort.js"></script>
 
