--- a/sbm.html
+++ b/sbm.html
@@ -63,7 +63,7 @@
  <p>5/16</p>
     </div>
      <div class="logro2">
-<img src="imagenes/logros/empty.png">
+<img src="imagenes/logros/acrobata2.png">
  <p>6/16</p>
     </div>
      <div class="logro3">
